# AI-Voice-Benchmarks

./: .replit  README.md  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  voice-eval-harness-db.md  voice-eval-harness-paths.md
attached_assets/: Pasted--Replit-Prompt-Voice-AI-Eval-Harness-Beta-MVP-What-you-_1782185995109.txt
voice-eval-harness/: .env.example  Dockerfile  LICENSE  ROADMAP.md  docker-compose.yml  methodology.md  pyproject.toml  results.db
voice-eval-harness/scenarios/: booking-interrupted.yaml  booking-simple.yaml
voice-eval-harness/scripts/: export_results.py  run_benchmark.py  seed_audio.py  seed_sample_data.py
voice-eval-harness/src/api/: main.py  routes.py
voice-eval-harness/src/frontend/: docs.html  index.html  leaderboard.js  style.css
voice-eval-harness/src/harness/: audio_player.py  config.py  metrics.py  runner.py  scenarios.py  storage.py  webhook_store.py
voice-eval-harness/src/harness/adapters/: base.py  retell.py  vapi.py
voice-eval-harness/tests/: conftest.py  test_metrics.py  test_scenarios.py
voice-eval-harness/tests/fixtures/: sample_event_stream.json  sample_event_stream_interrupted.json
